--- a/src/index.scss
+++ b/src/index.scss
@@ -287,10 +287,10 @@ sup {
     background: #60cc52 !important;
   }
 }
-.css-18mw8gn-MuiFormControl-root {
+.MuiFormControl-root {
   width: 100% !important;
 }
-.css-h4y409-MuiList-root {
+.MuiList-root {
   max-width: 100% !important;
   margin: 0 10px !important;
 }
